cabal-version:      2.4
name:               Z-Regex
version:            0.1.0.0
synopsis:           Regular expression
description:
  Haskell binding to google re2, a fast, safe, thread-friendly alternative to backtracking regular expression engines.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Z.Haskell Contributors
maintainer:         winterland1989@gmail.com
copyright:          (c) Z.Haskell Contributors
category:           Data
build-type:         Custom
homepage:           https://github.com/haskell-Z/z-data
bug-reports:        https://github.com/haskell-Z/z-data/issues
extra-source-files:
  AUTHORS
  ChangeLog.md
  LICENSE
  README.md
  third_party/re2/re2/bitmap256.h
  third_party/re2/re2/bitstate.cc
  third_party/re2/re2/compile.cc
  third_party/re2/re2/dfa.cc
  third_party/re2/re2/filtered_re2.cc
  third_party/re2/re2/filtered_re2.h
  third_party/re2/re2/mimics_pcre.cc
  third_party/re2/re2/nfa.cc
  third_party/re2/re2/onepass.cc
  third_party/re2/re2/parse.cc
  third_party/re2/re2/perl_groups.cc
  third_party/re2/re2/pod_array.h
  third_party/re2/re2/prefilter.cc
  third_party/re2/re2/prefilter.h
  third_party/re2/re2/prefilter_tree.cc
  third_party/re2/re2/prefilter_tree.h
  third_party/re2/re2/prog.cc
  third_party/re2/re2/prog.h
  third_party/re2/re2/re2.cc
  third_party/re2/re2/re2.h
  third_party/re2/re2/regexp.cc
  third_party/re2/re2/regexp.h
  third_party/re2/re2/set.cc
  third_party/re2/re2/set.h
  third_party/re2/re2/simplify.cc
  third_party/re2/re2/sparse_array.h
  third_party/re2/re2/sparse_set.h
  third_party/re2/re2/stringpiece.cc
  third_party/re2/re2/stringpiece.h
  third_party/re2/re2/tostring.cc
  third_party/re2/re2/unicode_casefold.cc
  third_party/re2/re2/unicode_casefold.h
  third_party/re2/re2/unicode_groups.cc
  third_party/re2/re2/unicode_groups.h
  third_party/re2/re2/walker-inl.h
  third_party/re2/util/flags.h
  third_party/re2/util/logging.h
  third_party/re2/util/malloc_counter.h
  third_party/re2/util/mix.h
  third_party/re2/util/mutex.h
  third_party/re2/util/rune.cc
  third_party/re2/util/strutil.cc
  third_party/re2/util/strutil.h
  third_party/re2/util/utf.h
  third_party/re2/util/util.h

custom-setup
  setup-depends:
    , base   >=4.5 && <5
    , Cabal  >=2.4 && <4

source-repository head
  type:     git
  location: git://github.com/haskell-Z/z-data.git

flag integer-simple
  description:
    Use the [simple integer library](http://hackage.haskell.org/package/integer-simple)
    instead of [integer-gmp](http://hackage.haskell.org/package/integer-gmp)

  default:     False
  manual:      True

library
  exposed-modules:    Z.Data.Regex
  build-depends:      base >=4.12 && <5.0

  if os(windows)
    extra-libraries: stdc++
    cc-options:      -DWIN32_LEAN_AND_MEAN -D_WIN32_WINNT=0x0600

  else
    extra-libraries:
      stdc++
      pthread

  if flag(integer-simple)
    cpp-options:   -DINTEGER_SIMPLE
    build-depends: integer-simple >=0.1 && <0.5

  else
    cpp-options:   -DINTEGER_GMP
    build-depends: integer-gmp >=0.2 && <1.1

  include-dirs:       third_party/re2
  cxx-sources:
    cbits/regex.cc
    third_party/re2/re2/bitstate.cc
    third_party/re2/re2/compile.cc
    third_party/re2/re2/dfa.cc
    third_party/re2/re2/filtered_re2.cc
    third_party/re2/re2/mimics_pcre.cc
    third_party/re2/re2/nfa.cc
    third_party/re2/re2/onepass.cc
    third_party/re2/re2/parse.cc
    third_party/re2/re2/perl_groups.cc
    third_party/re2/re2/prefilter.cc
    third_party/re2/re2/prefilter_tree.cc
    third_party/re2/re2/prog.cc
    third_party/re2/re2/re2.cc
    third_party/re2/re2/regexp.cc
    third_party/re2/re2/set.cc
    third_party/re2/re2/simplify.cc
    third_party/re2/re2/stringpiece.cc
    third_party/re2/re2/tostring.cc
    third_party/re2/re2/unicode_casefold.cc
    third_party/re2/re2/unicode_groups.cc
    third_party/re2/util/rune.cc
    third_party/re2/util/strutil.cc

  default-language:   Haskell2010
  build-tool-depends: hsc2hs:hsc2hs -any
  cc-options:         -march=native -Wno-sign-compare

  -- currently it's ignored, see https://github.com/haskell/cabal/pull/6226
  -- we work around this issue using Setup.hs
  cxx-options:        -std=c++11
  ghc-options:
    -Wall -Wno-unticked-promoted-constructors -Wno-incomplete-patterns

  default-extensions:
    BangPatterns
    BinaryLiterals
    CApiFFI
    CPP
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UnboxedTuples
    UnliftedFFITypes
    ViewPatterns
